--- a/t.html
+++ b/t.html
@@ -1,26 +1,30 @@
 <template>
-    <div id="login-view">
-        <b-card id="login-container">
-                        <b-form @submit.prevent="login">
-                            <div class="logo">
-                                <img src="/assets/logo.svg"/>
-                            </div>
-                            <b-form-group id="login-user">
-                                <b-form-input type="text" v-model="email" required placeholder="Usuario">
-                                </b-form-input>
-                            </b-form-group>
-                            <b-form-group id="login-password">
-                                <b-form-input type="password" v-model="password" required placeholder="Contraseña">
-                                </b-form-input>
-                            </b-form-group>
-                            <b-button type="submit" variant="primary">Iniciar Sesión</b-button>
-                            <a>¿Olvidaste tu contraseña?</a>
-                        </b-form>
-                        <!--<div>
-                            <a><router-link to="registro">Obtén tu demo <b>GRATIS</b></router-link></a>
-                        </div>-->
-        </b-card>
+    <div id="app-layout">
+          <div id="side-nav" class="menu d-none d-sm-block d-xs-block">
+              <b-nav vertical class="w-100">
+                  <b-nav-item v-bind:class="{'current-view': currentView === 'dashboard'}" @click="goTo('dashboard')" v-b-tooltip.hover.right="'Reportes'"><i class="fas fa-chart-line"></i>Reportes</b-nav-item>
+                  <b-nav-item v-if="isAdmin" v-bind:class="{'current-view': currentView === 'companies'}" @click="goTo('companies')" v-b-tooltip.hover.right="'Compañías'"><i class="far fa-building"></i></b-nav-item>
+                  <b-nav-item v-bind:class="{'current-view': currentView === 'meters'}" @click="goTo('meters')" v-b-tooltip.hover.right="'Medidores'"><i class="fas fa-solar-panel"></i></b-nav-item>
+                  <b-nav-item v-bind:class="{'current-view': currentView === 'payments'}" @click="goTo('payments')" v-if="isAdmin" v-b-tooltip.hover.right="'Pagos'"><i class="fas fa-dollar-sign"></i></b-nav-item>
+                  <b-nav-item v-bind:class="{'current-view': currentView === 'analysis'}" @click="goTo('analysis')" v-if="isAdmin" v-b-tooltip.hover.right="'Análisis'"><i class="far fa-file-alt"></i></b-nav-item>
+                  <b-nav-item v-bind:class="{'current-view': currentView === 'calendar'}" @click="goTo('calendar')" v-if="isManager || isAccounting" v-b-tooltip.hover.right="'Calendario'"><i class="far fa-calendar-alt"></i></b-nav-item>
+                  <b-nav-item v-if="isManager" v-b-tooltip.hover.right="'Facturación'"><i class="fas fa-dollar-sign"></i></b-nav-item>
+                  <b-nav-item v-bind:class="{'current-view': currentView === 'myCompany'}" @click="goTo('myCompany')" v-if="isAccounting" v-b-tooltip.hover.right="'Mi compañía'"><i class="fas fa-users"></i></b-nav-item>
+                  <b-nav-item v-b-tooltip.hover.right="'Notificaciones'"><i class="far fa-bell"></i></b-nav-item>
+                  <b-nav-item v-if="!isAccounting" v-b-tooltip.hover.right="'Perfil'"><i class="far fa-user"></i></b-nav-item>
+                  <b-nav-item v-b-tooltip.hover.right="'Cerrar Sesión'" @click="logout()"><i class="fas fa-sign-out-alt"></i></b-nav-item>
+              </b-nav>
+          </div>
+          <div id="top-nav" class="menu d-md-none d-lg-none .d-xl-none mobile">
+              <b-nav class="w-100">
+                  <b-nav-item v-bind:class="{'current-view': currentView === 'dashboard'}" @click="goTo('dashboard')"><i class="fas fa-chart-line"></i></b-nav-item>
+                  <b-nav-item><i class="far fa-file-alt"></i></b-nav-item>
+                  <b-nav-item><i class="far fa-bell"></i></b-nav-item>
+                  <b-nav-item><i class="fas fa-coins"></i></b-nav-item>
+              </b-nav>
+          </div>
+          <div id="main">
+              <router-view></router-view>
+          </div>
     </div>
-</template>
-
-<script src="./login"></script>
+  </template>
